--- a/index.ipynb
+++ b/index.ipynb
@@ -1835,6 +1835,193 @@
    "source": [
     "# 4.0 Data Cleaning"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state                     0\n",
+       "account length            0\n",
+       "area code                 0\n",
+       "phone number              0\n",
+       "international plan        0\n",
+       "voice mail plan           0\n",
+       "number vmail messages     0\n",
+       "total day minutes         0\n",
+       "total day calls           0\n",
+       "total day charge          0\n",
+       "total eve minutes         0\n",
+       "total eve calls           0\n",
+       "total eve charge          0\n",
+       "total night minutes       0\n",
+       "total night calls         0\n",
+       "total night charge        0\n",
+       "total intl minutes        0\n",
+       "total intl calls          0\n",
+       "total intl charge         0\n",
+       "customer service calls    0\n",
+       "churn                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the number of missing values\n",
+    "dp.read_na()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for Duplicates\n",
+    "dp.read_duplicated()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conversion of feature datatypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the area code into a Categorical Dtype using pandas pd.Categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalDtype(categories=[408, 415, 510], ordered=False)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Conversion of the 'area code' into a Categorical dtype\n",
+    "df['area code'] = pd.Categorical(df['area code'])\n",
+    "df['area code'].dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conversion of feature values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the churn values using pandas .replace method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['churn'] = df['churn'].replace([False, True], ['False', 'True'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop unnecessary columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop the phone number feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['state', 'account length', 'area code', 'international plan',\n",
+       "       'voice mail plan', 'number vmail messages', 'total day minutes',\n",
+       "       'total day calls', 'total day charge', 'total eve minutes',\n",
+       "       'total eve calls', 'total eve charge', 'total night minutes',\n",
+       "       'total night calls', 'total night charge', 'total intl minutes',\n",
+       "       'total intl calls', 'total intl charge', 'customer service calls',\n",
+       "       'churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.drop('phone number', axis=1)\n",
+    "\n",
+    "# Test\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.0. Data Exploration"
+   ]
   }
  ],
  "metadata": {
