--- a/index.ipynb
+++ b/index.ipynb
@@ -4333,6 +4333,121 @@
    "source": [
     "# 7.0. Modelling"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying the Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the target\n",
+    "y = df.churn\n",
+    "\n",
+    "# Defining the predictors\n",
+    "X = df[df.columns[:-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessing(test_size=0.2):\n",
+    "\n",
+    "    # Imprelementing the Train Test Split\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=8)\n",
+    "\n",
+    "    # Separate X data into continuous vs. categorical\n",
+    "    X_train_cont = X_train.select_dtypes(include='number')\n",
+    "    X_test_cont = X_test.select_dtypes(include='number')\n",
+    "    X_train_cat = X_train.select_dtypes(exclude='number')\n",
+    "    X_test_cat = X_test.select_dtypes(exclude='number')\n",
+    "\n",
+    "    # Scale continuous values using MinMaxScaler\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_cont = scaler.fit_transform(X_train_cont)\n",
+    "    X_test_cont = scaler.transform(X_test_cont)\n",
+    "\n",
+    "    # Dummy encode categorical values using OneHotEncoder\n",
+    "    ohe = OneHotEncoder(handle_unknown='ignore')\n",
+    "    X_train_cat = ohe.fit_transform(X_train_cat)\n",
+    "    X_test_cat = ohe.transform(X_test_cat)\n",
+    "\n",
+    "    # Combine everything back together\n",
+    "    X_train_preprocessed = np.asarray(np.concatenate([X_train_cont, X_train_cat.todense()], axis=1))\n",
+    "    X_test_preprocessed = np.asarray(np.concatenate([X_test_cont, X_test_cat.todense()], axis=1))\n",
+    "\n",
+    "    # Label Encoding the target\n",
+    "    # All 0's represent False and 1's represent True\n",
+    "    y_train = LabelEncoder().fit_transform(y_train)\n",
+    "    y_test = LabelEncoder().fit_transform(y_test)\n",
+    "    \n",
+    "    # Synthetic Minority Oversampling Technique\n",
+    "    smote = SMOTE()\n",
+    "    X_train_resampled, y_train_resampled = smote.fit_resample(X_train_preprocessed, y_train)\n",
+    "    \n",
+    "    return X_train_resampled, X_test_preprocessed, y_train_resampled, y_test\n",
+    "\n",
+    "X_train_resampled, X_test_preprocessed, y_train_resampled, y_test = preprocessing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Metric Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scoring_keeper = []\n",
+    "\n",
+    "def scoring_function(name, model, splits=0.2):\n",
+    "    \"\"\"\n",
+    "    This function only requires a model.\n",
+    "    \n",
+    "    The function will fit it by itself and provide metrics for the SMOTE dataset and non-SMOTE dataset\n",
+    "    \"\"\"    \n",
+    "    X_train_resampled, X_test_preprocessed, y_train_resampled, y_test = preprocessing(test_size=splits)\n",
+    "    \n",
+    "    smote_model = model.fit(X_train_resampled, y_train_resampled)\n",
+    "    \n",
+    "    # Predict X train and X Test\n",
+    "    smote_train_pred = smote_model.predict(X_train_resampled)\n",
+    "    smote_test_pred = smote_model.predict(X_test_preprocessed)\n",
+    "\n",
+    "    cross_val_scores_smote = cross_val_score(smote_model, X_train_resampled, y_train_resampled).mean()\n",
+    "\n",
+    "    # Compare model scores\n",
+    "    print(f\"\"\"\n",
+    "    Metrics\n",
+    "        Train Accuracy Score: {accuracy_score(y_train_resampled, smote_train_pred)}\n",
+    "        Test Accuracy Score: {accuracy_score(y_test, smote_test_pred)}\n",
+    "        Train Recall Score: {recall_score(y_train_resampled, smote_train_pred)}\n",
+    "        Test Recall Score: {recall_score(y_test, smote_test_pred)}\n",
+    "    \"\"\")\n",
+    "    \n",
+    "    # Keep a record of the results\n",
+    "    scoring_keeper.append(\n",
+    "        {'name':name, 'model':model,\n",
+    "         'Accuracy': round(accuracy_score(y_test, smote_test_pred), 4),\n",
+    "         'CV Score': round(cross_val_scores_smote, 4),\n",
+    "         'Recall': round(recall_score(y_test, smote_test_pred), 4)\n",
+    "        }\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
