--- a/index.ipynb
+++ b/index.ipynb
@@ -4448,6 +4448,20 @@
     "        }\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression Model"
+   ]
   }
  ],
  "metadata": {
