--- a/index.ipynb
+++ b/index.ipynb
@@ -4462,6 +4462,59 @@
    "source": [
     "## Logistic Regression Model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics\n",
+      "        Train Accuracy Score: 0.7953549517966696\n",
+      "        Test Accuracy Score: 0.7766116941529235\n",
+      "        Train Recall Score: 0.7992988606485539\n",
+      "        Test Recall Score: 0.7070707070707071\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_function(name='Logistic Regression', model=LogisticRegression(random_state=8, max_iter=200))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Nearest Neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics\n",
+      "        Train Accuracy Score: 0.9211218229623137\n",
+      "        Test Accuracy Score: 0.7451274362818591\n",
+      "        Train Recall Score: 0.9982471516213848\n",
+      "        Test Recall Score: 0.7474747474747475\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_function(name='KNN', model=KNeighborsClassifier())"
+   ]
   }
  ],
  "metadata": {
