--- a/index.ipynb
+++ b/index.ipynb
@@ -4515,6 +4515,20 @@
    "source": [
     "scoring_function(name='KNN', model=KNeighborsClassifier())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
