Random Forest Model

--- a/index.ipynb
+++ b/index.ipynb
@@ -4520,15 +4520,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The K Nearest Neighbors Classification Model improved on the Logistic Regression producing an accurate prediction of 78% of churners but missed 22% who were misclassified"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Decision Trees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics\n",
+      "        Train Accuracy Score: 1.0\n",
+      "        Test Accuracy Score: 0.8950524737631185\n",
+      "        Train Recall Score: 1.0\n",
+      "        Test Recall Score: 0.7373737373737373\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_function(name='Decision Tree', model=DecisionTreeClassifier(random_state=8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Decision Tree Classification Model did not improve on the K Nearest Neighbors Classifier producing an accurate prediction of 76% of churners but missed 24% who were misclassified. It's accuracy however increased showing improved results and learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics\n",
+      "        Train Accuracy Score: 1.0\n",
+      "        Test Accuracy Score: 0.9385307346326837\n",
+      "        Train Recall Score: 1.0\n",
+      "        Test Recall Score: 0.7474747474747475\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_function(name='Random Forest', model=RandomForestClassifier(random_state=8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Random Forest Classification Model did not improve on the Decision Tree Classifier producing an accurate prediction of 76% of churners but missed 24% who were misclassified. It's test accuracy however increased showing improved results and learning."
+   ]
   }
  ],
  "metadata": {
