Evaluation of models

--- a/index.ipynb
+++ b/index.ipynb
@@ -4596,6 +4596,13 @@
    "source": [
     "The Random Forest Classification Model did not improve on the Decision Tree Classifier producing an accurate prediction of 76% of churners but missed 24% who were misclassified. It's test accuracy however increased showing improved results and learning."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation of Models and their Scores"
+   ]
   }
  ],
  "metadata": {
