Train test split selection

--- a/index.ipynb
+++ b/index.ipynb
@@ -4603,6 +4603,69 @@
    "source": [
     "## Evaluation of Models and their Scores"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Logistic Regression\n",
+      "\tRecall Score 0.7071\n",
+      "\tCV Score 0.7857\n",
+      "\n",
+      "\t KNN\n",
+      "\tRecall Score 0.7475\n",
+      "\tCV Score 0.8834\n",
+      "\n",
+      "\t Decision Tree\n",
+      "\tRecall Score 0.7374\n",
+      "\tCV Score 0.9299\n",
+      "\n",
+      "\t Random Forest\n",
+      "\tRecall Score 0.7475\n",
+      "\tCV Score 0.9691\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in scoring_keeper:\n",
+    "    print('\\t', item['name'])\n",
+    "    print('\\tRecall Score',item['Recall'])\n",
+    "    print('\\tCV Score',item['CV Score'])\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Test Split Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_split(range_of_values, models_list, names_of_models):\n",
+    "    record = []\n",
+    "    for split in range_of_values:\n",
+    "        X_train, X_test, y_train, y_test = preprocessing(test_size=split)\n",
+    "        for item,model in enumerate(models_list):\n",
+    "            model.fit(X_train, y_train)\n",
+    "            train_score = cross_val_score(model, X_train, y_train).mean()\n",
+    "            test_score = cross_val_score(model, X_test, y_test).mean()\n",
+    "            record.append({'split':split, 'name':names_of_models[item], \n",
+    "                          'train_score':train_score,\n",
+    "                           'test_score':test_score})\n",
+    "    return record"
+   ]
   }
  ],
  "metadata": {
