--- a/index.ipynb
+++ b/index.ipynb
@@ -4666,6 +4666,156 @@
     "                           'test_score':test_score})\n",
     "    return record"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'split': 0.5,\n",
+       "  'name': 'Logistic Regression',\n",
+       "  'train_score': 0.8070995590910492,\n",
+       "  'test_score': 0.8554260847674022},\n",
+       " {'split': 0.5,\n",
+       "  'name': 'KNN',\n",
+       "  'train_score': 0.8843992230135973,\n",
+       "  'test_score': 0.8818345291399183},\n",
+       " {'split': 0.5,\n",
+       "  'name': 'Decision Tree',\n",
+       "  'train_score': 0.927631116455462,\n",
+       "  'test_score': 0.892632752512992},\n",
+       " {'split': 0.5,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9652335584127278,\n",
+       "  'test_score': 0.9184082285878693},\n",
+       " {'split': 0.4,\n",
+       "  'name': 'Logistic Regression',\n",
+       "  'train_score': 0.7828327672893864,\n",
+       "  'test_score': 0.853079327532314},\n",
+       " {'split': 0.4,\n",
+       "  'name': 'KNN',\n",
+       "  'train_score': 0.8810114081828058,\n",
+       "  'test_score': 0.8830587705218103},\n",
+       " {'split': 0.4,\n",
+       "  'name': 'Decision Tree',\n",
+       "  'train_score': 0.9276209409067293,\n",
+       "  'test_score': 0.9017909943397819},\n",
+       " {'split': 0.4,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9665993997501106,\n",
+       "  'test_score': 0.9197938666891948},\n",
+       " {'split': 0.3,\n",
+       "  'name': 'Logistic Regression',\n",
+       "  'train_score': 0.777139549436796,\n",
+       "  'test_score': 0.8480000000000001},\n",
+       " {'split': 0.3,\n",
+       "  'name': 'KNN',\n",
+       "  'train_score': 0.8741886733416772,\n",
+       "  'test_score': 0.869},\n",
+       " {'split': 0.3,\n",
+       "  'name': 'Decision Tree',\n",
+       "  'train_score': 0.9344721526908636,\n",
+       "  'test_score': 0.8939999999999999},\n",
+       " {'split': 0.3,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9694871714643304,\n",
+       "  'test_score': 0.9},\n",
+       " {'split': 0.2,\n",
+       "  'name': 'Logistic Regression',\n",
+       "  'train_score': 0.7808953517418958,\n",
+       "  'test_score': 0.8560543148917068},\n",
+       " {'split': 0.2,\n",
+       "  'name': 'KNN',\n",
+       "  'train_score': 0.8762057800580312,\n",
+       "  'test_score': 0.8710582426214792},\n",
+       " {'split': 0.2,\n",
+       "  'name': 'Decision Tree',\n",
+       "  'train_score': 0.9382145808112835,\n",
+       "  'test_score': 0.8635618897991245},\n",
+       " {'split': 0.2,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9684503564497223,\n",
+       "  'test_score': 0.9010548759959599},\n",
+       " {'split': 0.1,\n",
+       "  'name': 'Logistic Regression',\n",
+       "  'train_score': 0.7874099653731118,\n",
+       "  'test_score': 0.808457711442786},\n",
+       " {'split': 0.1,\n",
+       "  'name': 'KNN',\n",
+       "  'train_score': 0.8845716927547718,\n",
+       "  'test_score': 0.8623699683401176},\n",
+       " {'split': 0.1,\n",
+       "  'name': 'Decision Tree',\n",
+       "  'train_score': 0.9345236679970185,\n",
+       "  'test_score': 0.8714156490275894},\n",
+       " {'split': 0.1,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9702778642663723,\n",
+       "  'test_score': 0.8833559475350519}]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Obtain the names and the models from the score keeping list we populated\n",
+    "names_list = []   \n",
+    "model_list = []\n",
+    "for model in scoring_keeper:\n",
+    "    names_list.append(model['name'])\n",
+    "    model_list.append(model['model'])\n",
+    "\n",
+    "range_values = [0.5, 0.4, 0.3, 0.2, 0.1]\n",
+    "\n",
+    "results = test_split(range_values, model_list, names_list)\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'split': 0.1,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9702778642663723,\n",
+       "  'test_score': 0.8833559475350519},\n",
+       " {'split': 0.4,\n",
+       "  'name': 'Random Forest',\n",
+       "  'train_score': 0.9665993997501106,\n",
+       "  'test_score': 0.9197938666891948})"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Best model based on training score\n",
+    "max_model_train = max(results, key=lambda x:x['train_score'])\n",
+    "\n",
+    "# Best model based on test score\n",
+    "max_model_test = max(results, key=lambda x:x['test_score'])\n",
+    "\n",
+    "# View models \n",
+    "max_model_train,max_model_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning"
+   ]
   }
  ],
  "metadata": {
