Hyperparameter Tuning and Train Test Split

--- a/index.ipynb
+++ b/index.ipynb
@@ -4816,6 +4816,146 @@
    "source": [
     "## Hyperparameter Tuning"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': [80, 90, 100, 110], 'criterion': ['gini', 'entropy'], 'min_samples_split': [2, 3, 4], 'min_samples_leaf': [1, 2, 3, 4]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variables that will populate our Grid Search Params\n",
+    "ranges = list(np.arange(80,120,10))\n",
+    "criterion = [\"gini\", \"entropy\"]\n",
+    "min_samples_split=list(np.arange(2, 5))\n",
+    "min_samples_leaf=list(np.arange(1, 5))\n",
+    "\n",
+    "# The grid search param_dict\n",
+    "param_grid = dict(n_estimators=ranges, criterion=criterion,\n",
+    "                  min_samples_split= min_samples_split,\n",
+    "                  min_samples_leaf = min_samples_leaf )\n",
+    "\n",
+    "print(param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10, estimator=RandomForestClassifier(),\n",
+       "             param_grid={'criterion': ['gini', 'entropy'],\n",
+       "                         'min_samples_leaf': [1, 2, 3, 4],\n",
+       "                         'min_samples_split': [2, 3, 4],\n",
+       "                         'n_estimators': [80, 90, 100, 110]},\n",
+       "             scoring='accuracy')"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "grid = GridSearchCV(\n",
+    "    RandomForestClassifier(), \n",
+    "    param_grid, cv=10, \n",
+    "    scoring='accuracy', \n",
+    "    return_train_score=False)\n",
+    "grid.fit(X_train_resampled, y_train_resampled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9400299850074962"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train Data Score\n",
+    "print(grid.score(X_train_resampled, y_train_resampled))\n",
+    "\n",
+    "# Test Data Score\n",
+    "grid.score(X_test_preprocessed, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'entropy',\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 3,\n",
+       " 'n_estimators': 80}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Saving the best parameters of the RandomForest in a variable\n",
+    "rf_parameters = grid.best_params_\n",
+    "rf_parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clear the scoring list to make room for the new models\n",
+    "scoring_keeper.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning and Train Test Split"
+   ]
   }
  ],
  "metadata": {
