Conclusions and Recommendations

--- a/index.ipynb
+++ b/index.ipynb
@@ -4956,6 +4956,64 @@
    "source": [
     "## Hyperparameter Tuning and Train Test Split"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Metrics\n",
+      "        Train Accuracy Score: 1.0\n",
+      "        Test Accuracy Score: 0.9550898203592815\n",
+      "        Train Recall Score: 1.0\n",
+      "        Test Recall Score: 0.8245614035087719\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "# RandomForest with the best scores with the Train Test Split and best parameters from GridSearchCV\n",
+    "scoring_function(name='RandomForest TTS 0.1', splits=0.1,\n",
+    "                 model=RandomForestClassifier(\n",
+    "                     criterion=rf_parameters['criterion'],\n",
+    "                     min_samples_leaf=rf_parameters['min_samples_leaf'],\n",
+    "                     min_samples_split=rf_parameters['min_samples_split'],\n",
+    "                     n_estimators=rf_parameters['n_estimators'],\n",
+    "                 )\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## COMMENTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After hyperparameter tuning and picking the right train-test split value, the RandomForest gave us the metrics we required as per the objectives we set out to achieve.\n",
+    "\n",
+    "Random Forest procuced an accuracy score of 100% and a recall score of 80.7%.\n",
+    "\n",
+    "This high recall score means that the model would be able to predict correctly the customers who would churn. It will however miss very few who might be misclassified as non-churners.\n",
+    "\n",
+    "However, corrective action and a deep focus on retaining the 80% would prove advantageous to Syria Telecommunications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.0. Conclusions and Recommendations"
+   ]
   }
  ],
  "metadata": {
